# convnet-intro

./: README.md  pyproject.toml
core/: train.py
